--- a/sites/all/themes/at_sirius/css/at_sirius.css
+++ b/sites/all/themes/at_sirius/css/at_sirius.css
@@ -3373,8 +3373,8 @@ table.grievance-timeline tr.pending {
 
 
 #grievance-letter-body table,
-#grievance-letter-body tbody {
-  border: none;
+#grievance-letter-body table {
+  border-collapse: separate;
 }
 
 .page-node-statuslog .unite-addlink {
