--- a/sites/all/themes/at_sirius/css/at_sirius.css
+++ b/sites/all/themes/at_sirius/css/at_sirius.css
@@ -3865,6 +3865,11 @@ input.ajax-processed:hover {
   display: none;
 }
 
+.node-grievance-form .form-type-date-popup .form-item label { 
+  display: block;
+}
+
+
 /* /sirius-worker/... */
 .ds-below-left,
 .ds-above-left {
