--- a/sites/all/themes/at_sirius/css/at_sirius.css
+++ b/sites/all/themes/at_sirius/css/at_sirius.css
@@ -3239,15 +3239,14 @@ table.grievance-timeline tr.pending {
   display: inline;
 }
 
-.form-item-field-grievance-document-types-und .form-type-checkbox,
-.form-item-irsets .form-type-checkbox {
+.form-item-field-grievance-document-types-und .form-type-checkbox {
   display: inline-block;
   width: 290px;
 }
 
 
 @media only print {
-  body {
+  body, p, a {
     font-size: 12pt;
     font-family: "Times New Roman", Times, serif;
     color: #000000;
@@ -3274,7 +3273,7 @@ table.grievance-timeline tr.pending {
   }
 
   td {
-    padding: 11px 0 11px 22px !important;
+    padding: 11px 0 11px 22px;
   }
 
   #header {
