--- a/sites/all/modules/_custom/sirius/css/wizard.css
+++ b/sites/all/modules/_custom/sirius/css/wizard.css
@@ -2,33 +2,54 @@ ul.sirius_wizard {
 	margin: 0;
 	padding: 0;
 	list-style: none;
+    margin: 0 0 32px 0;
 }
 
 ul.sirius_wizard li { 
 	display: inline-block; 
-	color: #333333;
-	padding: 10px;
-	margin: 5px;
+	padding: 0 14px 0 0;
+	overflow: visible;
+    height: 18px;
+    border-bottom: 1px solid #5984be;
 }
+ul.sirius_wizard li:last-child { 
+	padding: 0;
+}
+
+ul.sirius_wizard li span,
+ul.sirius_wizard li a {
+	padding: 8px 18px;
+	display: block;
+	border-radius: 18px;
+	border: 1px solid #5984be;
+	background-color: #e8edf3;
+	color: #5984be;
+	letter-spacing: 1px;
+	font-weight: normal;
+}
+
 
 ul.sirius_wizard li a {
-	color: #000000;
-	text-decoration: underline;
-	font-weight: bold;
+	border: 1px solid #5984be;
+	background-color: #5984be;
+	color: #fff;
+}
+ul.sirius_wizard li a:hover {
+	/* lightest blue: #e8edf3;  background */
+	/* light blue: #a0bbf5; table button border */
+	/* blue: #5984be; 2nd menu*/
+	/* dark blue: #1b4784; buttons*/
+	/* darkest blue: #0f3871; button hover*/
+	border: 1px solid #1b4784;
+	background-color: #1b4784;
+	color: #fff;
 }
 
-ul.sirius_wizard li.sirius_wizard_step_incomplete {
-	background-color: #aa9999;
-	border: 1px solid #ff3333;
+ul.sirius_wizard li.sirius_wizard_step_current a {
+	border: 1px solid #e89a00;
+	background-color: #e89a00;
+	color: #fff;	
 }
 
-ul.sirius_wizard li.sirius_wizard_step_complete {
-	background-color: #99aa99;
-	border: 1px solid #33ff33;
+ul.sirius_wizard li.sirius_wizard_step_incomplete span {
 }
-
-ul.sirius_wizard li.sirius_wizard_step_current {
-	background-color: #9999aa;
-	border: 1px solid #3333ff;
-}
-
