--- a/sites/all/themes/at_sirius/css/at_sirius.css
+++ b/sites/all/themes/at_sirius/css/at_sirius.css
@@ -3844,6 +3844,9 @@ tr.sirius_bg_linen,         tr.sirius_bg_linen          td { background-color: l
 tr.sirius_bg_lavenderblush, tr.sirius_bg_lavenderblush  td { background-color: lavenderblush; }
 tr.sirius_bg_mistyrose,     tr.sirius_bg_mistyrose      td { background-color: mistyrose; }
 tr.sirius_bg_linen,         tr.sirius_bg_linen          td { background-color: linen; }
+tr.sirius_bg_azure,         tr.sirius_bg_azure          td { background-color: azure; }
+tr.sirius_bg_linen,         tr.sirius_bg_linen          td { background-color: linen; }
+tr.sirius_bg_linen,         tr.sirius_bg_linen          td { background-color: linen; }
 
 /*
 snow  #FFFAFA
