--- a/sites/all/themes/at_sirius/css/basic_html.at_sirius.css
+++ b/sites/all/themes/at_sirius/css/basic_html.at_sirius.css
@@ -96,10 +96,11 @@ hr {
 .view-grievance-log td {
 	padding: 12px 0 6px 12px;
 }
-.view-grievance-log td.views-field-nothing {
+.view-grievance-log td.views-field-body {
 	padding: 0px 0px 12px 12px;
 	border-bottom: 1px dotted #5984be;
 }
+
 .view-grievance-log td.views-field-nothing pre {
 	margin: 0;
 }
