--- a/sites/all/modules/_custom/sirius/css/sirius.esignature.css
+++ b/sites/all/modules/_custom/sirius/css/sirius.esignature.css
@@ -63,3 +63,47 @@
 	opacity: 0.5;
 	color: #000000;
 }
+
+
+
+
+
+.sirius_esignature_popup_overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  filter: alpha(opacity=50);
+  -moz-opacity: 0.5;
+  -khtml-opacity: 0.5;
+  opacity: 0.5;
+  z-index: 9998;
+  background-color: black;
+}
+.sirius_esignature_popup_wrap {
+  position: absolute;
+  z-index: 9999;
+  overflow: auto;
+  background: white;
+  border-radius: 8px;
+  -moz-box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+.sirius_esignature_popup_contents {
+  padding: 20px;
+}
+.sirius_esignature_popup_close {
+  position: absolute;
+  bottom: 8px;
+  right: 8px;
+  height: 26px;
+  width: 26px;
+  background: url('../images/popup-announcement-icons.png');
+}
+.sirius_esignature_popup_close:hover {
+  background: url('../images/popup-announcement-icons.png') 0 -28px;
+  cursor: pointer;
+}
