--- a/sites/all/modules/_custom/sirius/css/sirius.esignature.css
+++ b/sites/all/modules/_custom/sirius/css/sirius.esignature.css
@@ -10,14 +10,14 @@
 	width: 100%;
 	height: 100%;
 	background-color: #ffffff;
-	border: 2px dashed #000000;
+	border-bottom: 3px dashed #000000;
 	-ms-touch-action: none;
 	position: absolute;
 	left;
 }
 
 .sirius_esignature_pane_accepted {
-	border: 2px dashed #116b23;
+	border-bottom: 3px dashed #116b23;
 }
 
 .sirius_esignature_statement_body {
@@ -37,18 +37,18 @@
 
 .sirius_esignature_render_img {
 	width: 200px;
-	border: 1px dashed #000000;
+	border-bottom: 3px dashed #000000;
 }
 
 .sirius_esignature_render_missing {
 	width: 200px;
 	height: 40px;
-	border: 1px dashed #666666;
+	border-bottom: 3px dashed #aaaaaa;
 }
 
 .sirius_esignature_render_img_full {
 	width: 400px;
-	border: 2px dashed #000000;
+	border-bottom: 3px dashed #000000;
 }
 
 .sirius_esignature_render_date {
