--- a/sites/all/modules/_custom/sirius/css/mightysearch.css
+++ b/sites/all/modules/_custom/sirius/css/mightysearch.css
@@ -10,3 +10,11 @@
 	padding-top: 14px;
 	float: right;
 }
+
+.sirius_mightsearch_clausepart input {
+	width: 200px;
+}
+
+.sirius_mightsearch_clausepart_field select {
+	max-width: 400px;
+}
