--- a/sites/all/modules/_custom/sirius_twilio/css/sirius_twilio_browserphone.css
+++ b/sites/all/modules/_custom/sirius_twilio/css/sirius_twilio_browserphone.css
@@ -3,15 +3,21 @@
 }
 
 #sirius_browserphone_volume {
-  display: none;
   width: 200px;
   text-align: left;
 }
 
+#sirius_browserphone_volume label { 
+  width: 80px;
+  float: left;
+}
 #sirius_browserphone_volume > div {
   display: block;
   height: 20px;
   width: 0;
+  border: 1px solid #333333;
+  margin-left: 80px;
+  width: 200px;
 }
 
 div#controls div#log {
@@ -51,4 +57,21 @@ div#controls div#log {
 
 #sirius_browserphone .ui-tabs .ui-tabs-panel {
   padding: 10px;
+}
+
+#sirius_browserphone_tab_keypad table {
+  border: 0;
+  width: auto;
+}
+
+#sirius_browserphone_tab_keypad tr {
+  border: 0;
+  padding: 0;
+  margin: 0;
+}
+
+#sirius_browserphone_tab_keypad td {
+  border: 0;
+  padding: 0;
+  margin: 0;
 }
