--- a/sites/all/modules/_custom/sirius/css/mightysearch.css
+++ b/sites/all/modules/_custom/sirius/css/mightysearch.css
@@ -19,6 +19,14 @@
 	max-width: 400px;
 }
 
+.sirius_mightsearch_clausepart_value textarea {
+	width: 200px;
+}
+
+.sirius_mightsearch_clausepart_value .form-checkboxes input {
+	width: auto;
+}
+
 .sirius_mightysearch_report table, 
 .sirius_mightysearch_report tr, 
 .sirius_mightysearch_report td, 
