--- a/sites/all/themes/at_sirius/css/at_sirius.css
+++ b/sites/all/themes/at_sirius/css/at_sirius.css
@@ -2509,7 +2509,8 @@ input.teaser-button {
 
 }
 
-input.form-button-disabled {
+input.form-button-disabled,
+input.form-submit:disabled {
   background-color: #666666;
 }
 
@@ -2902,15 +2903,23 @@ fieldset legend a:visited {
 .loopback #page-banner, 
 .loopback #page-footer, 
 .loopback #header,
-.loopback .banner-menu-outer-wrapper { 
+.loopback .banner-menu-outer-wrapper,
+.loopback #primary-tasks,
+.loopback #secondary-tasks,
+.loopback .primary-local-tasks-wrapper,
+.loopback .secondary-tasks-wrapper { 
   display: none;
 }
 
 body.loopback {
   background: none;
   color: #000000;
+  margin-top: 0 !important;
 }
 
+body.loopback.admin-menu {
+  margin-top: 0 !important;
+}
 
 .gform_body h3 {
   font-size: 18px;
