--- a/sites/all/themes/at_sirius/css/basic_html.at_sirius.css
+++ b/sites/all/themes/at_sirius/css/basic_html.at_sirius.css
@@ -23,6 +23,10 @@ tbody tr {
 	border-bottom: 1px solid #5984be;	
 	background-color: #ffffff;
 }
+
+tbody tr.no_bottom {
+	border-bottom: none;
+}
 tbody td {
 	background-color: #ffffff;
 }
@@ -31,6 +35,7 @@ a.tool-button {
 	border: 1px solid #a0bbf5;
 	display: inline-block;
 	margin-right: 10px;
+	background-color: #ffffff;
 }
 a.tool-button:hover {
 	color: #1b4784;
