--- a/sites/all/modules/_custom/sirius_ledger/css/transmittal.css
+++ b/sites/all/modules/_custom/sirius_ledger/css/transmittal.css
@@ -7,3 +7,9 @@ sirius_ledger_transmittal.th,
 sirius_ledger_transmittal.td {
 	border: none;
 }
+
+.sirius_transmittal_autofill, .sirius_transmittal_autofill_all {
+	padding: 5px;
+	margin-right: 5px;
+	border: 1px solid #1b4784;
+}
