--- a/sites/all/themes/at_sirius/css/at_sirius.css
+++ b/sites/all/themes/at_sirius/css/at_sirius.css
@@ -4168,3 +4168,7 @@ table.sirius_data_table th {
   padding: 5px;
   vertical-align: top;
 }
+
+body.cke_editable_themed {
+  background-color: #ffffff;
+}
