--- a/sites/all/modules/_custom/sirius_event/css/sirius_event.phonebank.css
+++ b/sites/all/modules/_custom/sirius_event/css/sirius_event.phonebank.css
@@ -61,7 +61,7 @@
 	margin: 0;
 	padding: 0;
 	padding-left: 15px;
-	border-top: 1px solid #333333;
+	border-top: 1px solid #999999;
 	margin-top: 10px;
 	margin-bottom: 20px;
 }
@@ -73,8 +73,8 @@
 	background-color: #ffffff;
 	padding: 0;
 	margin: 0;
-	padding-left: 2px;
-	padding-right: 2px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 #sirius_event_phonebank_survey #survey_wrap fieldset .fieldset-wrapper {
@@ -192,13 +192,19 @@
 #sirius_event_phonebank_survey .columns_table,
 #sirius_event_phonebank_survey .columns_table tr,
 #sirius_event_phonebank_survey .columns_table td {
-	border: 1px solid #5984be;
+	border: 2px solid #5984be;
 }
 
 #sirius_event_phonebank_survey .columns_table td {
 	padding: 10px;
 }
 
+#sirius_event_phonebank_survey .columns_table table,
+#sirius_event_phonebank_survey .columns_table table tr,
+#sirius_event_phonebank_survey .columns_table table td {
+	border: 0;
+	padding: 0;
+}
 
 #sirius_event_phonebank_survey #survey_wrap,
 #sirius_event_phonebank_survey #survey_wrap select {
