Disclaimers, preliminary work on sessions

--- a/sites/all/modules/_custom/sirius_event/css/event.css
+++ b/sites/all/modules/_custom/sirius_event/css/event.css
@@ -1,4 +1,4 @@
-.sirius_event_survey_results {
+#content .sirius_event_survey_results {
 	padding: 20px;
 	margin: 20px;
 	border: 1px solid #cccccc;
