--- a/sites/all/modules/_custom/sirius_event/css/event.css
+++ b/sites/all/modules/_custom/sirius_event/css/event.css
@@ -35,3 +35,8 @@
 	margin-top: 0;
 	padding-top: 0;
 }
+
+#content .columns_table .date-padding .form-type-textfield {
+	margin-top: 0;
+	margin-bottom: 0;
+}
