Tools to show restricted version of mightysearch

--- a/sites/all/modules/_custom/sirius/css/mightysearch.css
+++ b/sites/all/modules/_custom/sirius/css/mightysearch.css
@@ -48,3 +48,8 @@
 	font-size: 125%;
 	background-color: #cccccc;
 }
+
+
+.mightysearch_lock_clauses .sirius_mightsearch_clausepart {
+	padding-right:  10px;
+}
