Damn that date field, always adding more padding.

--- a/sites/all/themes/at_sirius/css/at_sirius.css
+++ b/sites/all/themes/at_sirius/css/at_sirius.css
@@ -3952,6 +3952,11 @@ input.ajax-processed:hover {
   display: block;
 }
 
+.form-type-date-popup .date-padding .form-item {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 
 /* /sirius-worker/... */
 .ds-below-left,
