Minor theme change to the help section

--- a/sites/all/themes/at_sirius/css/at_sirius.css
+++ b/sites/all/themes/at_sirius/css/at_sirius.css
@@ -3735,10 +3735,9 @@ fieldset.date-combo .container-inline-date .date-padding {
 
 div.sirius_help {
   background: url(images/help.png) no-repeat 8px 5px #f0f8ff;
-  border: 0;
-  margin: 10px;''
-  padding: 0;
-  border-radius: 2px;
+  margin: 0 0 28px 0;
+  padding: 0 15px 0 0;
+  border: 1px solid #5984be;
 }
 
 
