Bookmarks, minor theme changes

--- a/sites/all/themes/at_sirius/css/basic_html.at_sirius.css
+++ b/sites/all/themes/at_sirius/css/basic_html.at_sirius.css
@@ -24,6 +24,10 @@ tbody tr {
 	background-color: #ffffff;
 }
 
+tbody tr:hover td {
+	background-color: #eeeeee;
+}
+
 tbody tr.no_bottom {
 	border-bottom: none;
 }
