--- a/sites/all/modules/_custom/sirius/css/quickactions.css
+++ b/sites/all/modules/_custom/sirius/css/quickactions.css
@@ -1,16 +1,21 @@
 
-ul.primary li a.sirius_quickaction_link {
+ul.primary li a.sirius_quickaction_link,
+ul.primary li a.flag {
+	margin-right:  10px;
 }
 
-ul.primary li a.sirius_quickaction_link:hover {
+ul.primary li a.sirius_quickaction_link:hover,
+ul.primary li a.flag:hover {
 	border-top:  2px solid #ff0000;
 }
 
-ul.primary li a.sirius_quickaction_link:hover {
+ul.primary li a.sirius_quickaction_link:hover,
+ul.primary li a.flag:hover {
 	border-bottom: 3px solid #e8edf3 !important;
 }
 
-ul.primary li a.sirius_quickaction_link span.sirius_quickaction_link_inner {
+ul.primary li a.sirius_quickaction_link span.sirius_quickaction_link_inner,
+ul.primary li a.flag span.sirius_quickaction_link_inner {
 	border: 1px solid #a0bbf5;
 	font-size: 80%;
 	padding:  4px;
@@ -18,8 +23,13 @@ ul.primary li a.sirius_quickaction_link span.sirius_quickaction_link_inner {
 	color: #5984be;
 }
 
-
-ul.primary li a.sirius_quickaction_link:hover span.sirius_quickaction_link_inner {
+ul.primary li a.sirius_quickaction_link:hover span.sirius_quickaction_link_inner,
+ul.primary li a.flag:hover span.sirius_quickaction_link_inner {
 	border-color: #333333;
 	color: #333333;
+}
+
+
+ul.primary li a.sirius_quickaction_link span.unicode_checkbox {
+	font-weight: bold;
 }
