--- a/sites/all/modules/_custom/sirius_event/css/survey.css
+++ b/sites/all/modules/_custom/sirius_event/css/survey.css
@@ -173,6 +173,14 @@
 	font-size: 20px;
 }
 
+#content #survey_wrap .field-label-inline h2.field-label {
+	font-size: 1em;
+	padding-top:  0;
+	padding-bottom:  0;
+	margin-top:  0;
+	margin-bottom:  0;
+}
+
 #survey_wrap {
 	color: #1b4784;
 }
